Add functionality to restart content shell between test runs.

Many layout tests will flakily fail when run in a clean content shell, but will
deterministically fail or pass when run in a reused content shell.

Unfortunately, we cannot restart content shell between all tests because that
significantly increases run time. [2X on Windows, 3X on Linux, 5X on macOS].

This CL adds the functionality to restart content shell between all test runs,
but then only enables it for tests with --gtest_repeat or --repeat-each with a
repeat count > 1.

Effects:
* For a local developer, this will only have an effect when using --gtest_repeat
  or --repeat-each. In this case, the developer is already trying to tease out
  some type of non-determinism between tests, and it's important to use a clean
  content shell. With this CL, flaky tests can be easily reproduced with
  --gtest_repeat, whereas they could not before. See
  https://bugs.chromium.org/p/chromium/issues/detail?id=894527#c5 for examples.
* On the CQ, this will only have an effect on 'retry without patch' and 'retry
  with patch', which retry failing tests looking for flakiness. This will help
  the CQ better detect tests that are flaky on ToT to reduce false rejects.

Change-Id: I4c04e382e733f8e1b40f4a6dde78292a41126a1b
Bug: 875884,  889036
Reviewed-on: https://chromium-review.googlesource.com/c/1273810
Reviewed-by: Aleks Totic <atotic@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600077}
Former-commit-id: 5524af6018c603cd943c8f76ade1e407a5459ad7